@@ -1,6 +1,6 @@
 project.dir       =
 project.name      = phpmd
-project.version   = 1.0.0
+project.version   = 1.0.1
 project.stability = stable
 
 coding.standard = PEAR
