@@ -1,3 +1,11 @@
+phpmd-1.0.1 (2011/02/12)
+========================
+
+- Fixed #9930643: The include_path does not match with PHP_Depend's new
+  directory layout. Fixed with commit #531be78.
+- Fixed #9626017: Clear temporary resources after a test has finished.
+  Fixed with commit #b385f15.
+
 phpmd-1.0.0 (2011/02/05)
 ========================
 
